# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md  check_lab06.sh  license.rtf  main_solver.cpp
.github/workflows/: ci.yml  cpack.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_ex_lib/formatter_lib/: CMakeLists.txt  formatter.h
hello_world_application/: hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
